# vidwaanai

./: .actrc  .coveragerc  .dockerignore  .env.example  .env.mcp  .env.test  .gitignore  .python-version  DOCKER-QUICKSTART.md  Deliverables.md  Dockerfile  Dockerfile.ci  Dockerfile.mcp  HOW-TO-RUN-MCP  Makefile  Makefile-docker  QUICKSTART.md  README.md  SUPPORTED_LANGUAGES.md  ci-workflow.yml  docker-compose-ci.yml  docker-compose-full.yml  docker-compose-mcp.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_retrieval.py
.github/workflows/: ci.yml  lint.yml  mcp-tests.yml  status.yml  test.yml  tests.yml
ansible/: ansible.cfg
ansible/group_vars/: docker_hosts.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: building_graph_workflow.yml  custom_scripture_workflow.yml  full_workflow.yml  ingest_and_vectorize_workflow.yml  main_workflow.yml  ontology_manual_workflow.yml  quick_workflow.yml  test_workflow.yml
ansible/templates/: workflow_summary.j2
config/: test_config.json
data/scriptures/: bhagavad_gita.json
database/: init.sql
docs/: DOCUMENTATION_INDEX.md  advanced_retrieval_results.json  conf.py  index.rst  knowledge-graph-ontology.md  mcp_tools.md  multilingual_evaluation.json  phase1_improvements.md  phase1_results.md  profiling_results.json  retrieval_baseline.json  retrieval_integration_guide.md  src.agent.rst  src.api.rst  src.ingestion.rst  src.mcp.tools.rst
ontology_project/: domain_specification.md  maintenance_plan.md  ontology_specification.md  tracking_sheet.md
ontology_project/queries/: batch_1.md  batch_2.md  batch_3.md  batch_from_db.md  phase_3_normalization.md  templates.md
ontology_project/source_materials/: chunking_strategy.md
output/reports/: report_20251213T201838.txt  report_20251214T011059.txt  report_20251214T014842.json  report_20251214T014842.txt  report_20251214T021201.txt  report_20251214T022449.txt  report_20260110T024425.txt  summary_20251214T014842.html
scripts/: aggregate_responses.py  analyze_queries.py  backup_graph.sh  backup_ingestion.sh  backup_vectorization.sh  build_graph.py  build_knowledge_graph.py  check_consistency.py  check_metrics.py  clean_scripture.py  create_indexes.sql  debug_pdf_text.py  debug_taxonomy.py  debug_verses.py  deploy_to_neo4j.py  evaluate_advanced_retrieval.py  evaluate_multilingual.py  evaluate_retrieval.py  explain_queries.py  generate_prompts.py  generate_prompts_from_db.py  generate_report.py  ingest_all_scriptures.sh  ingest_all_vedas.sh  ingest_scripture.py  ingest_vedas.py  inspect_data.py  json_to_rdf.py  load_sample_data.py  load_test.py  multilingual_test_queries.json  optimize_db.py  profile_queries.py  reset_data.py  run_analysis_pipeline.sh  run_ansible_workflow.sh  schema.sql  seed_ontology.py  setup_db.py  setup_veda_schema.py  (+17 more)
src/: api.py  main.py
src/agent/: prompt_templates.py  query_router.py  vidwaan_agent.py
src/api/: dependencies.py  main.py  models.py  routes.py  search_routes.py
src/cache/: embedding_cache.py  language_cache.py  query_cache.py  redis_cache.py  search_cache.py
src/chunking/: veda_chunker.py
src/core/: agent_service.py  config.py  constants.py  logger.py  monitoring.py  profiler.py
src/db/: batch_operations.py  db_manager.py
src/embeddings/: veda_embedder.py
src/evaluation/: ab_testing.py  retriever_evaluator.py
src/graph/: entity_extractor.py  graph_builder.py  graph_ingestor.py  graph_manager.py  graph_retriever.py  hybrid_search.py  ontology.py  reasoning_service.py  routes.py  schema.py  setup_graph.py  taxonomy_extractor.py
src/ingestion/: ocr_handler.py  pdf_extractor.py  scripture_parsers.py  text_processor.py  utils.py  veda_parser.py
src/language/: bengali_processor.py  bhojpuri_processor.py  chhattisgarhi_processor.py  dogri_processor.py  gujarati_processor.py  haryanvi_processor.py  hindi_processor.py  kannada_processor.py  konkani_processor.py  language_detector.py  language_processor.py  maithili_processor.py  malayalam_processor.py  marathi_processor.py  rajasthani_processor.py  tamil_processor.py  telugu_processor.py
src/llm/: lmstudio_client.py  openai_client.py
src/mcp/: client.py  server.py
src/rag/: chunking.py  crosslingual_search.py  embeddings.py  multilingual_embeddings.py  multilingual_search.py  reranker.py
src/retrieval/: advanced_retrieval_pipeline.py  bm25_search.py  (+7 more)
tests/: README.md  conftest.py  query_types_specification.md  relevance_judgments.json  test_graph_rag.py  test_queries.json  test_runner.py
(+461 files in other folders)
