[project]
name = "vidwaan-ai"
version = "0.1.0"
description = "VidwaanAI - Multilingual AI Agent for Indian Scriptures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "typer[all]>=0.12.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "click>=8.0.0",
    "llama-index>=0.9.0,<1.0.0",
    "llama-index-vector-stores-postgres>=0.1.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=0.15.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "neo4j>=5.15.0",
    "llama-index-graph-stores-neo4j>=0.1.0",
    "networkx>=3.2",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "python-json-logger>=2.0.0",
    "requests>=2.30.0",
    "optimum>=1.16.0",
    "onnxruntime>=1.17.0",
    "rank_bm25>=0.2.2",
    "prometheus_client>=0.19.0",
    "langdetect>=1.0.9",
    "regex>=2023.0.0",
    "nltk>=3.8.0",
    "transformers>=4.35.2",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.0.53",
    "mcp>=0.1.0",
    "anthropic>=0.3.0",
    "langdetect>=1.0.9",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "indic-nlp-library>=0.81",
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "redis>=5.0.0",
    "spacy>=3.7.0",
    "deepeval>=0.20.0",
]

[project.scripts]
vidwaan = "src.main:app"

[dependency-groups]
dev = [
    "ansible>=2.12.0",
    "ansible-lint>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.300",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "coverage>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "responses>=0.23.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "types-requests>=2.30.0",
    "types-redis>=4.6.0",
    "types-PyYAML>=6.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
]



[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "functional: Functional tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
